@@ -46,6 +46,11 @@ import sys
 import threading
 import time
 
+MOSQUITTO_MAJOR=1
+MOSQUITTO_MINOR=2
+MOSQUITTO_REVISION=90
+MOSQUITTO_VERSION_NUMBER=(MOSQUITTO_MAJOR*1000000+MOSQUITTO_MINOR*1000+MOSQUITTO_REVISION)
+
 if sys.version_info[0] < 3:
     PROTOCOL_NAME = "MQIsdp"
 else:
